--- a/requirements.txt
+++ b/requirements.txt
@@ -24,11 +24,13 @@ google-generativeai==0.8.6
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 grpcio-status==1.71.2
+gunicorn==23.0.0
 httplib2==0.31.0
 idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 numpy==2.3.5
+packaging==25.0
 pillow==11.2.1
 proto-plus==1.27.0
 protobuf==5.29.5
